--- a/package.json
+++ b/package.json
@@ -5,12 +5,18 @@
   "private": true,
   "scripts": {
     "dev": "astro dev",
-    "build": "astro build",
+    "build": "paraglide-js compile --project ./project.inlang --outdir ./src/paraglide && astro build",
     "preview": "astro preview",
-    "astro": "astro"
+    "astro": "astro",
+    "machine-translate": "inlang machine translate --project project.inlang"
   },
   "dependencies": {
+    "@astrojs/node": "^9.2.1",
     "astro": "^5.7.10",
     "simple-icons": "^14.12.3"
+  },
+  "devDependencies": {
+    "@inlang/cli": "^3.0.0",
+    "@inlang/paraglide-js": "2.0.12"
   }
 }
